Atelier 6 pas totalement implémenté, finir les modifs de la factory